-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.1
-
None
-
-
ef763e195892a6d8ce207f5d947fe508f645cb6d (qt/qtbase/dev) c67eaed8468c36629597aead9a768c9fe711ad85 (qt/qtbase/6.0) 9807573764bea70d1e449881c5fb67fc262ca8c4 (qt/qtbase/6.1) 6a64b8ed56d70d76cc154e66f03824b3c3a2a786 (qt/tqtc-qtbase/tqtc/lts-5.15)
We try to render texts in an OpenGL application. For this we assemble the text glyph by glyph using QRawFont.
On Debian Buster we get wrong results: The resulting QImage contains the correct glyph but is followed by lots of garbage.
On Windows the result seems to be correct.
See screenshots.
You may reproduce the effect using the attached code.
With real world code with whole texts instead of only a single glyph this leads to crashes, probably because of memory corruption.